static to variables
updated static values with variables for a more dynamic code

--- a/fgtvm.conf
+++ b/fgtvm.conf
@@ -5,18 +5,21 @@ end
 config system interface
 edit port1
 set alias WAN1
-set mode dhcp
+set ip ${port1_ip}
+set mode static
 set allowaccess ping https ssh fgfm
 next
 edit port2
 set alias WAN2
-set mode dhcp
+set ip ${port2_ip}
+set mode static
 set allowaccess ping https ssh fgfm
 next
 next
 edit port3
 set alias private
-set mode dhcp
+set ip ${port3_ip}
+set mode static
 set allowaccess ping https ssh fgfm
 set defaultgw disable
 next
@@ -31,7 +34,7 @@ config members
 edit 2
 set interface "port2"
 set zone "Overlay"
-set gateway 10.150.5.1
+set gateway ${pubsub2_gw}
 next
 end
 end
@@ -45,7 +48,7 @@ config members
 edit 1
 set interface "port1"
 set zone "Overlay"
-set gateway 10.150.1.1
+set gateway ${pubsub1_gw}
 next
 end
 end
